--- a/homework/day6hw.ipynb
+++ b/homework/day6hw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "id": "jbkK8wprdbdY"
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "id": "1mZQSUx_fry7"
    },
@@ -47,13 +47,12 @@
     "#. 將下兩列array存成npz檔\n",
     "array1 = np.array(range(30))\n",
     "array2 = np.array([2,3,5])\n",
-    "with open('multi_array.npz', 'wb') as f:\n",
-    "    np.savez(f, array1=array1, array2=array2)"
+    "np.savez('array.npz',array1,array2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -62,28 +61,28 @@
        "numpy.lib.npyio.NpzFile"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "npzfile = np.load('multi_array.npz')\n",
+    "npzfile = np.load('array.npz')\n",
     "type(npzfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['array1', 'array2']"
+       "['arr_0', 'arr_1']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -108,20 +107,30 @@
     }
    ],
    "source": [
-    "print(npzfile['array1'])\n",
-    "print(npzfile['array2'])"
+    "print(npzfile['arr_0'])\n",
+    "print(npzfile['arr_1'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "Ie1TGcssiIDN"
    },
    "outputs": [],
    "source": [
-    "#2. 讀取剛剛的npz檔，加入下列array一起存成新的npz檔"
+    "#2. 讀取剛剛的npz檔，加入下列array一起存成新的npz檔\n",
+    "load_array = np.load('array.npz')\n",
+    "array3 = np.array([[4,5,6],[1,2,3]])\n",
+    "np.savez('new_array.npz',load_array['arr_0'],load_array['arr_1'],array3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
