--- a/homework/day8hw.ipynb
+++ b/homework/day8hw.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {
     "id": "5n4rAx-9VgVr"
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {
     "id": "Vl-wSYQdUBcw"
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {
     "id": "ElavkYgwVftG"
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {
     "id": "N-xffNSVWbP1"
    },
@@ -120,12 +120,12 @@
    ],
    "source": [
     "#2. 呈上題，將array中體重(weight)數據集取出算出全部平均體重\n",
-    "print(\"平均體重=\",array['weight'].mean())"
+    "print(\"平均體重=\",np.mean(array['weight']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {
     "id": "_LhLg8RiWwEm"
    },
@@ -140,12 +140,12 @@
    ],
    "source": [
     "#3. 呈上題，進一步算出男生(sex欄位是boy)平均體重\n",
-    "print(\"男生平均體重=\",array[array['sex']=='boy']['weight'].mean())"
+    "print(\"男生平均體重=\",np.mean(array[array['sex']=='boy']['weight']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {
     "id": "f_J05IPxX6fg"
    },
@@ -154,14 +154,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "女生平均體重= 47.8\n"
+      "男生平均體重= 47.8\n"
      ]
     }
    ],
    "source": [
     "#3. 呈上題，進一步算出女生(sex欄位是girl)平均體重\n",
-    "\n",
-    "print(\"女生平均體重=\",array[array['sex']=='girl']['weight'].mean())"
+    "print(\"女生平均體重=\",np.mean(array[array['sex']=='girl']['weight']))"
    ]
   },
   {
