--- a/homework/day18hwData Visualization_Day-1_HW.ipynb
+++ b/homework/day18hwData Visualization_Day-1_HW.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +62,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -99,7 +108,8 @@
     "\n",
     "plt.plot(x, y_cos)\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig(\"filename.png\",dpi=300,format=\"png\")"
    ]
   },
   {
