--- a/homework/day1hw.ipynb
+++ b/homework/day1hw.ipynb
@@ -3,107 +3,404 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "5aWZnhxBD2p2"
+    "id": "P6xk2_jLsvFF"
    },
    "source": [
-    "作業目標:<br>\n",
-    "在array中，可以靈活應用索引幫助資料擷取<br>\n",
-    "作業重點:<br>\n",
-    "陣列的索引、切片、以及屬性，皆需要注意使用方式<br>\n",
-    "陣列之中索引式由0開始請同學注意"
+    "# [作業目標]\n",
+    "\n",
+    "1. [簡答題] 請問下列兩種將 Array 轉換成 List 的方式有何不同？\n",
+    "\n",
+    "```\n",
+    "print('list(a): ', list(a))\n",
+    "print('tolist(): ', a.tolist())\n",
+    "```\n",
+    "\n",
+    "2. 請試著在程式中印出以下三個 NdArray 的屬性？（屬性：ndim、shape、size、dtype、itemsize、length、type）\n",
+    "\n",
+    "```\n",
+    "a = np.random.randint(10, size=6) \n",
+    "b = np.random.randint(10, size=(3,4)) \n",
+    "c = np.random.randint(10, size=(2,3,2)) \n",
+    "```\n",
+    "\n",
+    "3. 如何利用 list(...) 實現 a.tolist() 的效果？試著用程式實作。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Ec7jpEEnD4rj"
+    "id": "uXGll28asvFS"
    },
    "source": [
-    "題目:<br>\n",
-    "1.生成一個等差數列，首數為0，尾數為20，公差為1的數列。<br>\n",
-    "2.呈上題，將以上數列取出偶數。<br>\n",
-    "3.呈1題，將數列取出3的倍數。<br>"
+    "# 作業 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "SYkvkp9YLwB7"
+   },
+   "source": [
+    "### 1. [簡答題] 請問下列兩種將 Array 轉換成 List 的方式有何不同？\n",
+    "\n",
+    "```\n",
+    "print('list(a): ', list(a))\n",
+    "print('tolist(): ', a.tolist())\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
-    "id": "NfVTcwauD3rg"
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "id": "QrOaxfmeEpvo"
+    "id": "5QrYoyNWsvFS",
+    "outputId": "13f374d0-6f1b-47aa-bbac-c7d1a8c6995c"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]\n"
+      "[9 3 5 6 9 0]\n",
+      "<class 'numpy.ndarray'>\n",
+      "list(a):  [9, 3, 5, 6, 9, 0]\n",
+      "tolist():  [9, 3, 5, 6, 9, 0]\n"
      ]
     }
    ],
    "source": [
-    "#1.生成一個等差數列，首數為0，尾數為20，公差為1的數列。\n",
-    "a= np.arange(0, 21, 1)\n",
-    "print(a)"
+    "import numpy as np\n",
+    "a=np.random.randint(10,size=6)\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "print('list(a): ', list(a))\n",
+    "print('tolist(): ', a.tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 4]\n",
+      " [2 1]\n",
+      " [9 2]]\n",
+      "<class 'numpy.ndarray'>\n",
+      "list(b):  [array([5, 4]), array([2, 1]), array([9, 2])]\n",
+      "<class 'list'>\n",
+      "b.tolist():  [[5, 4], [2, 1], [9, 2]]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.random.randint(10, size=6).reshape(3,2)\n",
+    "print(b)\n",
+    "print(type(b))\n",
+    "print('list(b): ', list(b))\n",
+    "print(type(list(b)))\n",
+    "print('b.tolist(): ', b.tolist())\n",
+    "print(type(b.tolist()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans:\n",
+    "list中的元素只有第一層轉換為list,元素則為原本型態\\\n",
+    "tolist則將整個array以及其中元素,都轉換成list\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "id": "5FFeFSvoEtRP"
+    "id": "AC9wUCyALwB9"
+   },
+   "source": [
+    "### 2. 請試著在程式中印出以下三個 NdArray 的屬性並且解釋結果？（屬性：ndim、shape、size、dtype、itemsize、length、type）\n",
+    "\n",
+    "```\n",
+    "a = np.random.randint(10, size=6) \n",
+    "b = np.random.randint(10, size=(3,4)) \n",
+    "c = np.random.randint(10, size=(2,3,2)) \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "id": "4qARRsdtLwB-"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0  2  4  6  8 10 12 14 16 18 20]\n"
+      "[6 7 1 6 8 7]\n",
+      "1\n",
+      "(6,)\n",
+      "6\n",
+      "int32\n",
+      "4\n",
+      "6\n",
+      "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
    "source": [
-    "#2.呈上題，將以上數列取出偶數。\n",
-    "b=a[::2]\n",
-    "print(b)"
+    "# 記得先 Import 正確的套件\n",
+    "a = np.random.randint(10, size=6) \n",
+    "print(a)\n",
+    "print(a.ndim)\n",
+    "print(a.shape)\n",
+    "print(a.size)\n",
+    "print(a.dtype)\n",
+    "print(a.itemsize)\n",
+    "print(len(a))\n",
+    "print(type(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 7 9 9]\n",
+      " [3 9 6 4]\n",
+      " [0 7 9 8]]\n",
+      "2\n",
+      "(3, 4)\n",
+      "12\n",
+      "int32\n",
+      "4\n",
+      "3\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.random.randint(10, size=(3,4)) \n",
+    "print(b)\n",
+    "print(b.ndim)\n",
+    "print(b.shape)\n",
+    "print(b.size)\n",
+    "print(b.dtype)\n",
+    "print(b.itemsize)\n",
+    "print(len(b))\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
-    "id": "7-HcNGFsFD-_"
+    "id": "iIJrIr7kLwB_",
+    "outputId": "083c5519-394c-404e-9764-100c4ed5118a"
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0  3  6  9 12 15 18]\n"
+      "[[[3 9]\n",
+      "  [7 8]\n",
+      "  [8 5]]\n",
+      "\n",
+      " [[0 1]\n",
+      "  [8 5]\n",
+      "  [6 3]]]\n",
+      "3\n",
+      "(2, 3, 2)\n",
+      "12\n",
+      "int32\n",
+      "4\n",
+      "2\n",
+      "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
    "source": [
-    "#3.呈1題，將數列取出3的倍數。\n",
-    "c=a[::3]\n",
-    "print(c)"
+    "c = np.random.randint(10, size=(2,3,2)) \n",
+    "print(c)\n",
+    "print(c.ndim)\n",
+    "print(c.shape)\n",
+    "print(c.size)\n",
+    "print(c.dtype)\n",
+    "print(c.itemsize)\n",
+    "print(len(c))\n",
+    "print(type(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Uf6zC0QZLwCE"
+   },
+   "source": [
+    "### 3. 如何利用 list(...) 實現 a.tolist() 的效果？試著用程式實作。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "id": "sCUzHu_BLwCF",
+    "outputId": "ba9c8945-8efb-42b1-f978-2bbdda97accd"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 2, 1, 9, 5]\n",
+      "[1, 9, 2, 1, 9, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(10, size=6) \n",
+    "\n",
+    "print(a.tolist())\n",
+    "print(list(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "id": "IUkVtw8RLwCG",
+    "outputId": "e39875a5-5ec7-431b-c12a-485acc167e44"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3, 9, 3, 4], [2, 4, 8, 2], [0, 2, 9, 8]]\n",
+      "[array([3, 9, 3, 4]), array([2, 4, 8, 2]), array([0, 2, 9, 8])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.random.randint(10, size=(3,4)) \n",
+    "\n",
+    "print(b.tolist())\n",
+    "print(list(b))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "id": "NPhF8_CqLwCG",
+    "outputId": "51fab908-5bfd-415f-9584-92bb376648c8"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2, 7], [7, 1], [7, 8]], [[7, 1], [0, 0], [4, 8]]]\n",
+      "[array([[2, 7],\n",
+      "       [7, 1],\n",
+      "       [7, 8]]), array([[7, 1],\n",
+      "       [0, 0],\n",
+      "       [4, 8]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.random.randint(10, size=(2,3,2)) \n",
+    "\n",
+    "print(c.tolist())\n",
+    "print(list(c))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "id": "3Hc8vQYtLwCH",
+    "outputId": "1290bc93-84ca-4da4-eb1a-315da37afaff"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 2, 1, 9, 5]\n",
+      "[[3, 9, 3, 4], [2, 4, 8, 2], [0, 2, 9, 8]]\n",
+      "[[[2, 7], [7, 1], [7, 8]], [[7, 1], [0, 0], [4, 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tolist(iterable):\n",
+    "    if type(iterable) != np.ndarray:\n",
+    "        return iterable\n",
+    "    new = []\n",
+    "    for obj in iterable:\n",
+    "        new.append(tolist(obj))\n",
+    "    return list(new)\n",
+    "\n",
+    "print(tolist(a))\n",
+    "print(tolist(b))\n",
+    "print(tolist(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "id": "2lDVOwFpLwCJ",
+    "outputId": "ddfa84e4-3d32-4a68-c250-f57b2f66d830"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 2, 1, 9, 5]\n",
+      "[[3, 9, 3, 4], [2, 4, 8, 2], [0, 2, 9, 8]]\n",
+      "[[[2, 7], [7, 1], [7, 8]], [[7, 1], [0, 0], [4, 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tolist(iterable):\n",
+    "    if type(iterable) != np.ndarray:\n",
+    "        return iterable\n",
+    "    return [tolist(obj) for obj in iterable]\n",
+    "\n",
+    "print(tolist(a))\n",
+    "print(tolist(b))\n",
+    "print(tolist(c))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "6_6Emob-FHn3"
+    "id": "tvqCpuFILwCK"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "640whg6NLwCK"
    },
    "outputs": [],
    "source": []
@@ -111,8 +408,7 @@
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
-   "name": "作業題目.ipynb",
+   "name": "01Homework_維元.ipynb",
    "provenance": []
   },
   "kernelspec": {
@@ -130,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
